feat: ocpi token receiver module
All very rough and ready - but should give an idea of how to go
about implementing an OCPI module
